# Homework-11.1

./: .flake8  README.md  generators.py  pyproject.toml  requirements.txt
scr/: external_api.py  file_handlers.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: test_masks.py  test_processing.py  test_transactions_filtered_by_currency.py  test_widget.py
